--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 
 <script>
   // Your web app's Firebase configuration
-  var firebaseConfig = {
-    apiKey: "AIzaSyDWruNu2MpLPCU6tzxcRm79hKqT5IVBzB8",
-    authDomain: "multiplayer-racing-e2773.firebaseapp.com",
-    databaseURL: "https://multiplayer-racing-e2773-default-rtdb.firebaseio.com",
-    projectId: "multiplayer-racing-e2773",
-    storageBucket: "multiplayer-racing-e2773.appspot.com",
-    messagingSenderId: "695142558940",
-    appId: "1:695142558940:web:68ef57282cb65bed8c1819"
+  const firebaseConfig = {
+    apiKey: "AIzaSyAvdqs2ALQRbW_CI1vZdqhaC_vHn6lenEA",
+    authDomain: "interesting-game-3c1d2.firebaseapp.com",
+    databaseURL: "https://interesting-game-3c1d2-default-rtdb.firebaseio.com",
+    projectId: "interesting-game-3c1d2",
+    storageBucket: "interesting-game-3c1d2.appspot.com",
+    messagingSenderId: "1011359776811",
+    appId: "1:1011359776811:web:0b6b7fc5ea3811a42fea6e"
   };
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
